Revert "Use embedded PDF docs"
This reverts commit bfb5e8c297f63ec84792c922cb09c1e93da3f20c.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,7 +3,7 @@
 <div id='document-text' style="display: none;">
   {{ task.input.text }}
 </div>
-<div id='document-pdf' style="display: none;">
+<div id='encodedImage' style="display: none;">
   {{ task.input.image_url }}
 </div>
 <div id="metadata" style="display: none;">
