changes to input manifest to utilize new augmented manifest feature

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,7 +4,7 @@
   {{ task.input.text }}
 </div>
 <div id='encodedImage' style="display: none;">
-  {{ task.input.image_url }}
+  {{ task.input.textObject }}
 </div>
 <div id="metadata" style="display: none;">
   {{ task.input.metadata }}
