--- a/web/public/test_template.html
+++ b/web/public/test_template.html
@@ -4,13 +4,13 @@
 <link rel="stylesheet" href="https://s3.amazonaws.com/smgtannotation/web/static/css/main.9504782e.chunk.css">
 
 <div id='document-text' style="display: none;">
-  {{ task.input.text }}
+  This is my Test
 </div>
 <div id='document-image' style="display: none;">
-        {{ task.input.taskObject | grant_read_access }}
+    https://s3.amazonaws.com/smgtannotation/raw-abstracts-jpgs/arXiv_1801_00067v2__astro-ph_GA__3_Apr_2018.jpg
 </div>
 <div id="metadata" style="display: none;">
-  {{ task.input.metadata }}
+    "{'Author': 'Jennifer Roberts', 'ISBN': '0-7970-7671-9'}"
 </div>
 
 <crowd-form>
@@ -38,3 +38,4 @@
 <script src="https://s3.amazonaws.com/smgtannotation/web/static/js/1.3e5a6849.chunk.js"></script>
 <script src="https://s3.amazonaws.com/smgtannotation/web/static/js/main.96e12312.chunk.js"></script>
 <script src="https://s3.amazonaws.com/smgtannotation/web/static/js/runtime~main.229c360f.js"></script>
+
